--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -7862,7 +7862,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "최고의 안정성. 결합을 사용합니다. 유료 서비스."
+            "value" : "무선인터넷을 결합하여 가장 안정적입니다. SRTLA 서버는 유료입니다."
           }
         },
         "nl" : {
@@ -23448,7 +23448,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "로컬 오버레이는 방송 화면에 보이지 않습니다."
+            "value" : "로컬 오버레이는 방송으로 나가지 않습니다."
           }
         },
         "nl" : {
@@ -28539,7 +28539,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "OBS 장면은 %@"
+            "value" : "OBS 장면은 %@입니다."
           }
         },
         "nl" : {
@@ -29175,7 +29175,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "종종 네트워크 연결이 불안정하면 안정성이 떨어지는 경우가 많습니다. 서버 측 연결 끊김 보호가 불가능합니다(NOALBS 없음)."
+            "value" : "종종 네트워크 연결이 불안정하면 방송이 원활하지 않습니다. 서버 측 연결 끊김 보호가 불가능합니다(NOALBS 없음)."
           }
         },
         "nl" : {
@@ -33733,7 +33733,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "라이브 중에는 스트리밍을 중지하는 설정이 비활성화됩니다."
+            "value" : "라이브 중에는 스트리밍을 중지와 관련된 설정이 비활성화됩니다."
           }
         },
         "nl" : {
@@ -39034,7 +39034,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "초광각 카메라는 어두운 조명 조건에서는 잘 작동하지 않습니다. 마찬가지로, 자동 카메라는 초광각 카메라가 사용되므로 줌이 0.5-1.0x 일 때 잘 많이 어둡습니다."
+            "value" : "초광각 카메라는 어두운 조명 조건에서는 잘 작동하지 않습니다. 마찬가지로, 자동 카메라는 초광각 카메라가 사용되므로 줌이 0.5-1.0x 일 때 많이 어둡습니다."
           }
         },
         "nl" : {
@@ -40518,7 +40518,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "삼중"
+            "value" : "트리플"
           }
         },
         "nl" : {
@@ -44016,7 +44016,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "위젯은 뒤에서부터 앞으로 쌓입니다."
+            "value" : "아래에 있는 위젯 소스는 밑바닥에 깔리므로 가려지게 됩니다."
           }
         },
         "nl" : {
