--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -19598,6 +19598,9 @@
         }
       }
     },
+    "Game controllers" : {
+
+    },
     "General" : {
       "localizations" : {
         "de" : {
