Game controller actions list.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -19598,7 +19598,13 @@
         }
       }
     },
+    "Function" : {
+
+    },
     "Game controller" : {
+
+    },
+    "Game controller button" : {
 
     },
     "Game controllers" : {
