--- a/Moblin/zh-Hant.lproj/InfoPlist.strings
+++ b/Moblin/zh-Hant.lproj/InfoPlist.strings
@@ -8,7 +8,7 @@
 "NSCameraUsageDescription" = "Moblin 串流影像來自相機。";
 
 /* Privacy - Local Network Usage Description */
-"NSLocalNetworkUsageDescription" = "Moblin 使用本地端作為 SRT 通訊協定的輸入與輸出。";
+"NSLocalNetworkUsageDescription" = "Moblin 使用本地端作為 SRT 函式庫的輸入與輸出。";
 
 /* Privacy - Microphone Usage Description */
 "NSMicrophoneUsageDescription" = "Moblin 串流音源來自麥克風。";
